# Courses

./: CMakeLists.txt
3sem/Proxy/: CircleBuffer.c
3sem/msg/: main.c
3sem/signals/: main.c
4sem/task1/: CMakeLists.txt  Makefile  main.c
4sem/task1/ForvardList/: forvard_list.c  forvard_list.h
4sem/task1/HashTable/: HashTable.c  HashTable.h
4sem/task1/RBTree/include/: RBTree.h
4sem/task1/RBTree/src/: RBTree.c
4sem/task1/RBTree/tests/: utests.c  utests.h
4sem/task2/: CMakeLists.txt  CPUTopology.c  CPUTopology.h  Makefile  calc.c  calc.h  main.c
4sem/task3/: CMakeLists.txt  Makefile  main.c
4sem/task3/include/: common.h
4sem/task3/include/Integration/: calc.h  pthread_manager.h
4sem/task3/include/Network/: worker.h  worker_manager.h
4sem/task3/src/: common.c
4sem/task3/src/Integration/: calc.c  pthread_manager.c
4sem/task3/src/Network/: worker.c  worker_manager.c
6sem/.cache/clangd/index/: HelloMPI.cpp.E08BC105B5E28B43.idx
6sem/MPI/Exp/: CMakeLists.txt  main.cpp
6sem/MPI/Hello/: compile_commands.json  hello
6sem/MPI/RangeSum/: .NRange.cpp.swp  NRange.cpp  compile_commands.json
6sem/MPI/RangeSum/.cache/clangd/index/: NRange.cpp.1D87D4F4C6F9BB01.idx
6sem/MPI/SendRecive/: pingpong  sr
6sem/MPI/SendRecive/.cache/clangd/index/: pingpong.cpp.3A258C550F2EBF3B.idx  test2.cpp.D8E8347B0D82C63C.idx
Compilers_2022/: CMakeLists.txt  README.md  SEngine.cpp  SEngine.hpp  llvmgen.cpp  main.c  main.cpp  main.ll
Compilers_2022/glang/: CMakeLists.txt  README.md  driver.cpp
Compilers_2022/glang/Compiler/: VarTable.h  builder.hpp  builtins.cpp  builtins.h  utils.cpp  utils.h
Compilers_2022/glang/parser/: driver.h  gramar.y  lex.l
Compilers_2022/glang/tests/: 0_class_decl.cs  1_Integer.cs  2_if.cs  3_integer_bin.cs  3_while.cs  4_graph.cs  5_while.cs  6_fib.cs  7_sugar.cs  8_vector.cs  999_fract.cs
Compilers_2022/glib/: SEngine.cpp  SEngine.h  SEngine.hpp
Proxy/: CircleBuffer.c  CircleBuffer.h  main.c
calcMath/: 1_3_2_Newton.ipynb  1_3_Newton_MSI.ipynb  1_4_2_interpolation.ipynb  1_4_interpolation.ipynb  1_5_2_integration.ipynb  1_5_integration.ipynb  2_1_explicitRK.ipynb  2_3_cyclingTridiagonalMatrixAlg.ipynb  2_4_ShootingMethod.ipynb  2_99_transferEquition.ipynb
informatic/: README.md
informatic/4sem/task1/: main.c
informatic/4sem/task1/RBTree/tests/: utests.c  utests.h
informatic/4sem/task2/: CPUTopology.c
msg/: main
parprog/6_sem/: README.md
parprog/6_sem/Exp/: README.md
parprog/6_sem/Integral/: ThreadPool.hpp  main2.cpp
parprog/6_sem/Lab1/: main.cpp  main_dop.cpp
parprog/6_sem/RangeSum/: CMakeLists.txt  NRange.cpp
parprog/6_sem/SendRecive/: CMakeLists.txt  sr.cpp
parprog/6_sem/Threads_0/: CMakeLists.txt
parprog/7_sem/: Copyin.cpp  Hello.cpp  Nested.cpp  Ordered.cpp  Schedule.cpp  Sum.cpp
parprog/7_sem/MatrixMul/: CMakeLists.txt  Helper.hpp  graph.py  main.cpp  main_fast.cpp
parprog/7_sem/fft/: CMakeLists.txt  fft.cpp  fft.hpp  main.cpp  parTimes.txt  plot.py  seqTimes.txt
parprog/7_sem/lab1/: CMakeLists.txt  main_1d.cpp  main_2b.cpp  main_2b_omp.cpp  main_ref_omp.cpp
parprog/Exp/: CMakeLists.txt  main.cpp
parprog/Hello/: CMakeLists.txt
parprog/Hello/.cache/clangd/index/: HelloMPI.cpp.5BA9EB96ED407675.idx
parprog/Integral/: CMakeLists.txt  ThreadPool.hpp  Timer.hpp  main.cpp  main2.cpp
parprog/Lab1/: CMakeLists.txt  README.md  main.cpp  process.py
parprog/RangeSum/: NRange
parprog/SendRecive/: compile_commands.json  pingpong.cpp
parprog/SendRecive/.cache/clangd/index/: sr.cpp.ACF6B75F21AF41EF.idx
parprog/Threads_0/: Attr.cpp
signals/: main  main.c  text.txt
verilog/: counter.v  testbench.v
